src/css/hero.css
.pfp-container {
    width: 20rem; 
    height: 20rem; 
    border-radius: 50%; 
    overflow: hidden; 
}

.intro-pfp {
    width: 100%;
    height: 100%;
    object-fit: cover; 
    object-position: center; 
}

.intro {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    gap:2.3rem;
    background-image: url('../assets/headerBackground.jpg');
    background-size: cover; 
    background-repeat: no-repeat; 
    background-position: center; 
    height: 100vh; 
    overflow-y:hidden;
}

.intro-header {
    font-size: var(--text-5xl-font-size);
    text-transform: uppercase;
    color: var(--main-White);
    display: flex;
    align-items: center;
    justify-content: center;
    gap:1rem;
    background-color: transparent;
    overflow-y: hidden;


}

.handemoji {
    width: 1.5em;
    background-color: transparent;
}


.intro-message {
    width: 60ch;
    color: var(--text-Gray);
    background-color: transparent;
    font-size: var(--text-xl-font-size);
    overflow-y:hidden;
}

.intro-btn {
    font-size: var(--text-3xl-font-size);
    padding: .5em 1.5em;
    background-color: transparent;
    border: 5px solid var(--main-Pink);
    color: var(--main-Pink);
    cursor: pointer;
    transition: transform 1s ease-in-out !important; /* Add a transition property */
}

.intro-btn:hover {
    transform:translateY(-10px) !important; /* Scale up and move up by 5px on hover */
}
.intro-btn:active {
background-color: var(--main-Pink);
color: black;
border:5px solid black;
}
.hero-emoji {
    background-color: transparent;
    margin-top: -1.1rem;
    font-size: 1em;
}



.heroSocial {
    overflow-y: hidden;
    background-color: transparent;

}

.heroSocialList {
    gap: 2rem;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: transparent;
    padding:.5rem;
}
.heroSocialList li {
    max-width: 100px;
    width: 70px;
    overflow-y: hidden;
    background-color: none;
    transition: transform 0.1s;
    border:1px solid red;
}
.heroSocialList li:hover {
    transform: translateY(-5%); 
     cursor:pointer;
}
.hero-social {
    background-color: white;
    border-radius: 25%;
    padding: .5rem;
    
}
.hero-social img {
    background-color: transparent;
    width: 100%;
    overflow-y: hidden;
}

/* @keyframes glow-slide {
    0% {
        transform: translateY(0);
        box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
    }
    50% {
        transform: translateY(-10px); 
        box-shadow: 0 0 20px rgba(255, 255, 255, 0.7);
    }
    100% {
        transform: translateY(0);
        box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
    }
} */



    /* 2xl */
    @media (max-width: 1536px) {
    .container {
        max-width: 1536px;
    }
    }
    
    /* xl */
    @media (max-width: 1280px) {

        .pfp-container {
            width:20rem;
            height: 20rem;
        }
        
        .intro-header {
            font-size: var(--text-4xl-font-size);
        }
        
        .intro-message {
            width: 50ch;
            color: var(--text-Gray);
        }

        .intro-btn {
            font-size: var(--text-2xl-font-size);
        }
    }
    
    /* lg */
    @media (max-width: 1024px) {
        .pfp-container {
            width:18rem;
            height: 18rem;
        }

    }
    
    /* md */
    @media (max-width: 768px) {
        .pfp-container {
            width:17rem;
            height: 17rem;
        }
        
        .intro-header {
            font-size: var(--text-3xl-font-size);
        }
        
        .intro-message {
            width: 40ch;
            color: var(--text-Gray);
        }

        .intro-btn {
            font-size: var(--text-xl-font-size);
        }
    }
    
    /* sm */
    @media (max-width: 640px) {
        .pfp-container {
            width:16rem;
            height: 16rem;
        }
        
        .intro-header {
            font-size: var(--text-2xl-font-size);
        }
        
        .intro-message {
            width: 30ch;
            color: var(--text-Gray);
        }

        .intro-btn {
            font-size: var(--text-lg-font-size);
        }
    }
    
    /* xs */
    @media (max-width: 475px) {
        .pfp-container {
            margin-top:1rem;
            width:15rem;
            height: 15rem;
        }

        .hero-emoji {
            background-color: transparent;
            margin-top: -.5rem;
            font-size: 1.5em;
        }
        
        .intro-header {
            font-size: var(--text-xl-font-size);
        }
        
        .intro-message {
            width: 25ch;
            color: var(--text-Gray);
        }

        .intro-btn {
            font-size: var(--text-xl-font-size);
        }
        .heroSocialList {
                gap: 1.5rem;
                padding:.5rem;
            }
            .heroSocialList li {
    width: 65px;
}
    }

    @media (max-width: 400px) {
    
        .intro-message {
            width: 30ch;
            font-size: 1rem;
            color: var(--text-Gray);
        }
        .heroSocialList {
                gap: 1rem;
            }
        .heroSocialList li {
    width: 50px;
}
.pfp-container {
    width: 15rem; 
    height: 15rem; 
    border-radius: 50%; 
    overflow: hidden; 
}
.intro {
    gap:1rem;
}
    }

